--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,17 +10,17 @@ phases:
     - cd ..
   build: 
     commands:
-      # - echo "Zipping Deployment Package"
-      # - cd lambdafunction
-      # - zip -r ../car_network_build_package.zip lambda_function.py
-      # - zip -r ../dependency_layer.zip python/
-      # - cd ..
+      - echo "Zipping Deployment Package"
+      - cd lambdafunction
+      - zip -r ../car_network_build_package.zip lambda_function.py
+      - zip -r ../dependency_layer.zip python/
+      - cd ..
   post_build: 
     commands:
-      # - echo "Deploying to Lambda Function..."
-      # - aws lambda update-function-code --function-name User-Service --zip-file fileb://car_network_build_package.zip
-      # - echo "Lambda Deployed"
-      # - layer_arn=$(aws lambda publish-layer-version --layer-name user-service-dependencies --zip-file fileb://dependency_layer.zip --output text --query 'LayerVersionArn')
-      # - echo "Layer Created"
-      # - aws lambda update-function-configuration --function-name User-Service --layers $layer_arn
-      # - echo "Layer added"
+      - echo "Deploying to Lambda Function..."
+      - aws lambda update-function-code --function-name User-Service --zip-file fileb://car_network_build_package.zip
+      - echo "Lambda Deployed"
+      - layer_arn=$(aws lambda publish-layer-version --layer-name user-service-dependencies --zip-file fileb://dependency_layer.zip --output text --query 'LayerVersionArn')
+      - echo "Layer Created"
+      - aws lambda update-function-configuration --function-name User-Service --layers $layer_arn
+      - echo "Layer added"
