added create table script, db connection and changed buildspec to build the whole lambdafunction folder not just the .py file

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
     commands:
       - echo "Zipping Deployment Package"
       - cd lambdafunction
-      - zip -r ../car_network_build_package.zip lambda_function.py
+      - zip -r ../car_network_build_package.zip lambdafunction/
       - zip -r ../dependency_layer.zip python/
       - cd ..
   post_build: 
