--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
     commands:
       - echo "Zipping Deployment Package"
       - cd lambdafunction
-      - zip -r ../car_network_build_package.zip lambdafunction/
+      - zip -r ../car_network_build_package.zip .
       - zip -r ../dependency_layer.zip python/
       - cd ..
   post_build: 
